--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -21,7 +21,7 @@
     --box-shadow: 0 0 50px black;
 
     /* OTHER */
-    --blur: 21px;
+    --blur: 3vh;
 
 }
 .lightmode{
